--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Página Web</h1>
+        <h1>Bienvenido a Mi Página Web, Sergio Andrés Pulido Montano</h1>
     </header>
     <main>
         <section>
