--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página de Ejemplo</title>
+    <title>Mi Página de Ejemplo, HOLAAAAAAAAAAAAAAAAAAAAAAAAAA</title>
     <link rel="stylesheet" href="styles.css">  <!-- Vinculación al archivo CSS -->
 </head>
 <body>
